--- a/symfony/.env
+++ b/symfony/.env
@@ -26,3 +26,10 @@ APP_SECRET=bb27050bbbe5e9962e4d363d61c47d73
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL="postgresql://postgres:postgres@postgres:5432/symfony-messanger?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
