--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -18,6 +18,7 @@
         "symfony/dotenv": "^6.4",
         "symfony/flex": "^1.9",
         "symfony/framework-bundle": "^6.4",
+        "symfony/messenger": "^6.4",
         "symfony/mime": "^6.4",
         "symfony/property-access": "^6.4",
         "symfony/property-info": "^6.4",
