--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -15,6 +15,7 @@
         "phpdocumentor/reflection-docblock": "^5.0",
         "sensio/framework-extra-bundle": "^v6.2.10",
         "symfony/console": "^6.4",
+        "symfony/doctrine-messenger": "^6.4",
         "symfony/dotenv": "^6.4",
         "symfony/flex": "^1.9",
         "symfony/framework-bundle": "^6.4",
