--- a/symfony/config/packages/messenger.yaml
+++ b/symfony/config/packages/messenger.yaml
@@ -5,7 +5,11 @@ framework:
 
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
-             async: '%env(MESSENGER_TRANSPORT_DSN)%'
+             async:
+               dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+               options:
+                 check_delayed_interval: 1000
+
             # failed: 'doctrine://default?queue_name=failed'
             # sync: 'sync://'
 
