--- a/symfony/config/packages/messenger.yaml
+++ b/symfony/config/packages/messenger.yaml
@@ -1,16 +1,16 @@
 framework:
     messenger:
         # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
-        # failure_transport: failed
+        failure_transport: failed
 
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
-             async:
-               dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
-               options:
-                 check_delayed_interval: 1000
+            async:
+              dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+              options:
+                check_delayed_interval: 1000
 
-            # failed: 'doctrine://default?queue_name=failed'
+            failed: 'doctrine://default?queue_name=failed'
             # sync: 'sync://'
 
         routing:
