--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - ./symfony/:/var/www/symfony/
     command: >
       sh -c "php-fpm &
-      php /var/www/symfony/bin/console messenger:consume async -vv"
+      php /var/www/symfony/bin/console messenger:consume async_priority_high async -vv"
     networks:
       - symfony
     depends_on:
